--- a/start.yml
+++ b/start.yml
@@ -1,13 +1,5 @@
+#REPLACE IP CONFIG TO FILES MY SERVICES
 ---
-- hosts: local
-  gather_facts: False
-  vars_files:
-    - vars/list.yml
-
-  roles:
-    - replace
-  tags: replace
-
 - hosts: local
   gather_facts: False
   vars_files:
